<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Restaurant</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome</string>
    <string name="place_order">Place Order</string>
    <string name="give_rating">Give Rating</string>
    <string name="table_no_">Please select the Table No.</string>
    <string name="see_order">See Order</string>
    <string name="previous_orders">Previous Orders</string>
     <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Android Push Notifications</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">GCM: device successfully registered!</string>
    <string name="gcm_unregistered">GCM: device successfully unregistered!</string>
    <string name="gcm_message">GCM: you got message!</string>
    <string name="gcm_error">GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">Demo Server: successfully added device!</string>
    <string name="server_unregistered">Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    
    <string name="defaultText">  Select User </string>
     <drawable name="Blue">#b0e0e6</drawable>
     <drawable name="white">#ffffff</drawable>
     <drawable name="black">#000000</drawable>
     <drawable name="green">#347C2C</drawable>
     <drawable name="pink">#FF00FF</drawable>
     <drawable name="violet">#a020f0</drawable>
     <drawable name="grey">#cccccc</drawable>
     <drawable name="red">#C11B17</drawable>
     <drawable name="yellow">#FFFF8C</drawable>
     <drawable name="PowderBlue">#b0e0e6</drawable>
     <drawable name="brown">#2F1700</drawable>
     <string name="select_Category">Select User</string>
     <drawable name="darkgrey">#606060</drawable>

</resources>
