<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wall"
    android:orientation="vertical"
    tools:context="com.codragon.restuarant.MainActivity" >

    <TextView
        android:id="@+id/tvwelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60sp"
        android:layout_marginTop="25sp"
        android:background="#000000"
        android:text="@string/welcome"
        android:textColor="#ffffff"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#000000"
        android:text="@string/table_no_"
        android:textColor="#ffffff" />

    <Spinner
        android:id="@+id/spinner1"
        style="@style/CustomStyleButton"
        android:layout_width="149dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5sp"
        android:background="#4D4D4D" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="25sp"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/place_order"
                style="@style/CustomStyleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="#ffffff"
                android:text="@string/place_order" />

            <Button
                android:id="@+id/pre_order"
                android:layout_marginTop="20dp"
                style="@style/CustomStyleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="#ffffff"
                android:text="@string/previous_orders" />
        </LinearLayout>

        <Button
            android:id="@+id/give_rating"
            style="@style/CustomStyleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="-4dp"
            android:background="#ffffff"
            android:gravity="center_horizontal"
            android:text="@string/give_rating" />
    </LinearLayout>

</LinearLayout>